Add Home:4 header, hero, support, call-to-action, footer

--- a/scss/components/__components-dir.scss
+++ b/scss/components/__components-dir.scss
@@ -43,5 +43,8 @@
 @import 'cp-explore-topics';
 @import 'cp-logo-card';
 @import 'cp-community-post';
+@import 'cp-post-counts';
+@import 'cp-top-post-author';
+@import 'cp-forum-table';
 
 
