--- a/scss/components/_cp-searchbox.scss
+++ b/scss/components/_cp-searchbox.scss
@@ -97,4 +97,16 @@
             }
         }
     }
+    &--style-3 {
+        box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.05);
+        .searchbox-submit {
+            .rt-searchbox-btn {
+                background: #0289FF;
+                padding: 13px 29px;
+                font-size: 16px;
+                line-height: 19px;
+                text-transform: uppercase;
+            }
+        }
+    }
 }
