--- a/scss/layouts/_lo-call-to-action.scss
+++ b/scss/layouts/_lo-call-to-action.scss
@@ -52,6 +52,10 @@
                 background: $color-shade25;
                 color: $color-white;
             }
+            &--style-4 {
+                background: #0289FF;
+                color: $color-white;
+            }
         }
     }
 }
