Add Elements page, single element side nav

--- a/scss/components/__components-dir.scss
+++ b/scss/components/__components-dir.scss
@@ -47,5 +47,8 @@
 @import 'cp-top-post-author';
 @import 'cp-forum-table';
 @import 'cp-page-menu';
+@import 'cp-tab-widget';
+@import 'cp-element-info-card';
+@import 'cp-sidebar-nav';
 
 
