--- a/scss/layouts/__layouts-dir.scss
+++ b/scss/layouts/__layouts-dir.scss
@@ -19,4 +19,6 @@
 @import "lo-join-community";
 @import "lo-service";
 @import "lo-forum-status";
+@import "lo-elements";
+@import "lo-meta-list";
 
